--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,7 +62,7 @@ nav:
     - Modulo 4.3:  modulos/modulo 4/mod4.3_aritmetica_basica.md
     - Modulo 4.4:  modulos/modulo 4/mod4.4_comparacoes_e_desvios.md
     - Modulo 4.5:  modulos/modulo 4/mod4.5_saltos.md
-
+  - Modulo 5: modulos/modulo 5/mod5.md
   #    - Teste de Unidade: aae3/unit_test.md
   # - White-Box Testing:
   #    - Teste Caixa Branca: aae3/white_box_test.md
