--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,11 +57,11 @@ nav:
   - Modulo 2: modulos/modulo 2/mod2.md
   - Modulo 3: modulos/modulo 3/mod3.md
   - Modulo 4: 
-    - Modulo 4.1: modulos/modulo 4/mod4.1_instrucoes_de_imediato.md
-    - Modulo 4.2:  modulos/modulo 4/mod4.2_movimentacoes_de_dados.md
-    - Modulo 4.3:  modulos/modulo 4/mod4.3_aritmetica_basica.md
-    - Modulo 4.4:  modulos/modulo 4/mod4.4_comparacoes_e_desvios.md
-    - Modulo 4.5:  modulos/modulo 4/mod4.5_saltos.md
+    - 4.1. Instruções de Imediato (`li`, `addi`): modulos/modulo 4/mod4.1_instrucoes_de_imediato.md
+    - 4.2. Movimentação de Dados:  modulos/modulo 4/mod4.2_movimentacoes_de_dados.md
+    - 4.3. Aritmética Básica:  modulos/modulo 4/mod4.3_aritmetica_basica.md
+    - 4.4. Comparações e Desvios:  modulos/modulo 4/mod4.4_comparacoes_e_desvios.md
+    - 4.5. Saltos:  modulos/modulo 4/mod4.5_saltos.md
   - Modulo 5: modulos/modulo 5/mod5.md
   #    - Teste de Unidade: aae3/unit_test.md
   # - White-Box Testing:
