--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -63,6 +63,7 @@ nav:
     - 4.4. Comparações e Desvios:  modulos/modulo 4/mod4.4_comparacoes_e_desvios.md
     - 4.5. Saltos:  modulos/modulo 4/mod4.5_saltos.md
   - Modulo 5: modulos/modulo 5/mod5.md
+  - Modulo 6: modulos/modulo 6/mod6.md
   #    - Teste de Unidade: aae3/unit_test.md
   # - White-Box Testing:
   #    - Teste Caixa Branca: aae3/white_box_test.md
